# planetary-gif

./: .gitignore  CLAUDE.md  README.md  align_and_export.ssf  align_planets.py  config.yaml  make_jupiter.sh  pyproject.toml
configs/: best_config.yaml  config.yaml  good_weights.yaml
planetary_gif/: __init__.py  alignment.py  auto_tune.py  cli.py  config.py  frame_quality.py  gif.py  ser_reader.py  sharpening.py  stacker.py
